added species/tsn search endpoints

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -45,6 +45,8 @@ services:
       - ELASTICSEARCH_URL=${ELASTICSEARCH_URL}
       - ELASTICSEARCH_EML_INDEX=${ELASTICSEARCH_EML_INDEX}
       - ELASTICSEARCH_TAXONOMY_INDEX=${ELASTICSEARCH_TAXONOMY_INDEX}
+      # ITIS API
+      - ITIS_URL=${ITIS_URL}
       - S3_KEY_PREFIX=${S3_KEY_PREFIX}
       - TZ=${API_TZ}
       - API_HOST=${API_HOST}
