--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -46,7 +46,7 @@ services:
       - ELASTICSEARCH_EML_INDEX=${ELASTICSEARCH_EML_INDEX}
       - ELASTICSEARCH_TAXONOMY_INDEX=${ELASTICSEARCH_TAXONOMY_INDEX}
       # ITIS API
-      - ITIS_URL=${ITIS_URL}
+      - ITIS_SOLR_URL=${ITIS_SOLR_URL}
       - S3_KEY_PREFIX=${S3_KEY_PREFIX}
       - TZ=${API_TZ}
       - API_HOST=${API_HOST}
@@ -175,6 +175,7 @@ services:
       - REACT_APP_KEYCLOAK_HOST=${KEYCLOAK_HOST}
       - REACT_APP_KEYCLOAK_REALM=${KEYCLOAK_REALM}
       - REACT_APP_KEYCLOAK_CLIENT_ID=${KEYCLOAK_CLIENT_ID}
+      - REACT_APP_ITIS_SOLR_URL=${ITIS_SOLR_URL}
     volumes:
       - ./app:/opt/app-root/src
       - /opt/app-root/src/node_modules # prevents local node_modules overriding container node_modules
