--- a/api/.pipeline/templates/api.dc.yaml
+++ b/api/.pipeline/templates/api.dc.yaml
@@ -268,6 +268,7 @@ objects:
                   value: ${ELASTICSEARCH_EML_INDEX}
                 - name: ELASTICSEARCH_TAXONOMY_INDEX
                   value: ${ELASTICSEARCH_TAXONOMY_INDEX}
+                # ITIS SOLR
                 - name: ITIS_SOLR_URL
                   value: ${ITIS_SOLR_URL}
                 - name: S3_KEY_PREFIX
