--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -46,7 +46,8 @@ jobs:
       # Set to `true` if the latest commit message contains `ignore-skip` anywhere in the message OR the base branch
       # is dev, test, or prod.
       # Used to disable duplicate action skipping, if needed.
-      ignore_skip: ${{ contains(steps.head_commit_message.outputs.commit_message, 'ignore-skip') || 
+      ignore_skip:
+        ${{ contains(steps.head_commit_message.outputs.commit_message, 'ignore-skip') ||
         github.head_ref == 'dev' || github.head_ref == 'test' || github.head_ref == 'prod' }}
     steps:
       - id: skip_check
@@ -371,67 +372,67 @@ jobs:
         run: |
           DEBUG=* npm run build -- --pr=$PR_NUMBER
 
-  # Build the Queue image
-  buildQueue:
-    name: Build Queue Image
-    runs-on: ubuntu-latest
-    timeout-minutes: 20
-    if: ${{ github.event.pull_request.merged == false &&
-      github.event.pull_request.draft == false &&
-      ( needs.skipDuplicateActions.outputs.ignore_skip == 'true' ||
-      fromJSON(needs.skipDuplicateActions.outputs.paths_result).api.should_skip == false ||
-      fromJSON(needs.skipDuplicateActions.outputs.paths_result).api.skipped_by.branch != github.head_ref ) }}
-    env:
-      PR_NUMBER: ${{ github.event.number }}
-      APP_NAME: "biohub-platform-api"
-    needs:
-      - checkoutRepo
-      - skipDuplicateActions
-    steps:
-      # Install Node - for `node` and `npm` commands
-      - name: Setup Node.js
-        uses: actions/setup-node@v3
-        with:
-          node-version: 14
+  #   # Build the Queue image
+  #   buildQueue:
+  #     name: Build Queue Image
+  #     runs-on: ubuntu-latest
+  #     timeout-minutes: 20
+  #     if: ${{ github.event.pull_request.merged == false &&
+  #       github.event.pull_request.draft == false &&
+  #       ( needs.skipDuplicateActions.outputs.ignore_skip == 'true' ||
+  #       fromJSON(needs.skipDuplicateActions.outputs.paths_result).api.should_skip == false ||
+  #       fromJSON(needs.skipDuplicateActions.outputs.paths_result).api.skipped_by.branch != github.head_ref ) }}
+  #     env:
+  #       PR_NUMBER: ${{ github.event.number }}
+  #       APP_NAME: "biohub-platform-api"
+  #     needs:
+  #       - checkoutRepo
+  #       - skipDuplicateActions
+  #     steps:
+  #       # Install Node - for `node` and `npm` commands
+  #       - name: Setup Node.js
+  #         uses: actions/setup-node@v3
+  #         with:
+  #           node-version: 14
 
-      # Load repo from cache
-      - name: Cache repo
-        uses: actions/cache@v3
-        id: cache-repo
-        env:
-          cache-name: cache-repo
-        with:
-          path: ${{ github.workspace }}/*
-          key: ${{ runner.os }}-build-${{ env.cache-name }}-${{ github.sha }}
+  #       # Load repo from cache
+  #       - name: Cache repo
+  #         uses: actions/cache@v3
+  #         id: cache-repo
+  #         env:
+  #           cache-name: cache-repo
+  #         with:
+  #           path: ${{ github.workspace }}/*
+  #           key: ${{ runner.os }}-build-${{ env.cache-name }}-${{ github.sha }}
 
-      # Checkout the branch if not restored via cache
-      - name: Checkout Target Branch
-        if: steps.cache-repo.outputs.cache-hit != 'true'
-        uses: actions/checkout@v3
+  #       # Checkout the branch if not restored via cache
+  #       - name: Checkout Target Branch
+  #         if: steps.cache-repo.outputs.cache-hit != 'true'
+  #         uses: actions/checkout@v3
 
-      # Log in to OpenShift.
-      # Note: The secrets needed to log in are NOT available if the PR comes from a FORK.
-      # PR's must originate from a branch off the original repo or else all openshift `oc` commands will fail.
-      - name: Log in to OpenShift
-        run: oc login --token=${{ secrets.TOOLS_SA_TOKEN }} --server=https://api.silver.devops.gov.bc.ca:6443
+  #       # Log in to OpenShift.
+  #       # Note: The secrets needed to log in are NOT available if the PR comes from a FORK.
+  #       # PR's must originate from a branch off the original repo or else all openshift `oc` commands will fail.
+  #       - name: Log in to OpenShift
+  #         run: oc login --token=${{ secrets.TOOLS_SA_TOKEN }} --server=https://api.silver.devops.gov.bc.ca:6443
 
-      # Scale down any existing OpenShift pods for this PR deployment
-      # Why? The new pods will be deployed before the existing pods are terminated, and twice the resources will be needed
-      # in that moment. If not enough resources are available to spin up the new pods, then they may fail to deploy.
-      - name: Scale down api pods
-        run: oc get deploymentconfig --namespace a0ec71-dev --selector env-id=$PR_NUMBER,app-name=$APP_NAME -o name | awk '{print "oc scale --replicas=0 " $1}' | bash
+  #       # Scale down any existing OpenShift pods for this PR deployment
+  #       # Why? The new pods will be deployed before the existing pods are terminated, and twice the resources will be needed
+  #       # in that moment. If not enough resources are available to spin up the new pods, then they may fail to deploy.
+  #       - name: Scale down api pods
+  #         run: oc get deploymentconfig --namespace a0ec71-dev --selector env-id=$PR_NUMBER,app-name=$APP_NAME -o name | awk '{print "oc scale --replicas=0 " $1}' | bash
 
-      # Install api pipeline node modules
-      # Note: This already caches node modules internally
-      - name: Install pipeline node modules
-        working-directory: api/.pipeline/
-        run: npm ci
+  #       # Install api pipeline node modules
+  #       # Note: This already caches node modules internally
+  #       - name: Install pipeline node modules
+  #         working-directory: api/.pipeline/
+  #         run: npm ci
 
-      # Build the queue image
-      - name: Build Queue Image
-        working-directory: "./api/.pipeline/"
-        run: |
-          DEBUG=* npm run queue:build -- --pr=$PR_NUMBER
+  #       # Build the queue image
+  #       - name: Build Queue Image
+  #         working-directory: "./api/.pipeline/"
+  #         run: |
+  #           DEBUG=* npm run queue:build -- --pr=$PR_NUMBER
 
   # Deploy APP image
   deployAPP:
@@ -653,62 +654,62 @@ jobs:
         run: |
           DEBUG=* npm run deploy -- --pr=$PR_NUMBER --env=dev
 
-  # Deploy Queue image
-  deployQueue:
-    name: Deploy Queue Image
-    runs-on: ubuntu-latest
-    timeout-minutes: 20
-    if: ${{ always() &&
-      ( needs.deployDatabase.result == 'success' || needs.deployDatabase.result == 'skipped' ) &&
-      github.event.pull_request.merged == false &&
-      github.event.pull_request.draft == false &&
-      ( needs.skipDuplicateActions.outputs.ignore_skip == 'true' ||
-      fromJSON(needs.skipDuplicateActions.outputs.paths_result).api.should_skip == false ||
-      fromJSON(needs.skipDuplicateActions.outputs.paths_result).api.skipped_by.branch != github.head_ref ) }}
-    env:
-      PR_NUMBER: ${{ github.event.number }}
-    needs:
-      - buildQueue
-      - deployDatabase
-    steps:
-      # Install Node - for `node` and `npm` commands
-      - name: Setup Node.js
-        uses: actions/setup-node@v3
-        with:
-          node-version: 14
+  #   # Deploy Queue image
+  #   deployQueue:
+  #     name: Deploy Queue Image
+  #     runs-on: ubuntu-latest
+  #     timeout-minutes: 20
+  #     if: ${{ always() &&
+  #       ( needs.deployDatabase.result == 'success' || needs.deployDatabase.result == 'skipped' ) &&
+  #       github.event.pull_request.merged == false &&
+  #       github.event.pull_request.draft == false &&
+  #       ( needs.skipDuplicateActions.outputs.ignore_skip == 'true' ||
+  #       fromJSON(needs.skipDuplicateActions.outputs.paths_result).api.should_skip == false ||
+  #       fromJSON(needs.skipDuplicateActions.outputs.paths_result).api.skipped_by.branch != github.head_ref ) }}
+  #     env:
+  #       PR_NUMBER: ${{ github.event.number }}
+  #     needs:
+  #       - buildQueue
+  #       - deployDatabase
+  #     steps:
+  #       # Install Node - for `node` and `npm` commands
+  #       - name: Setup Node.js
+  #         uses: actions/setup-node@v3
+  #         with:
+  #           node-version: 14
 
-      # Load repo from cache
-      - name: Cache repo
-        uses: actions/cache@v3
-        id: cache-repo
-        env:
-          cache-name: cache-repo
-        with:
-          path: ${{ github.workspace }}/*
-          key: ${{ runner.os }}-build-${{ env.cache-name }}-${{ github.sha }}
+  #       # Load repo from cache
+  #       - name: Cache repo
+  #         uses: actions/cache@v3
+  #         id: cache-repo
+  #         env:
+  #           cache-name: cache-repo
+  #         with:
+  #           path: ${{ github.workspace }}/*
+  #           key: ${{ runner.os }}-build-${{ env.cache-name }}-${{ github.sha }}
 
-      # Checkout the branch if not restored via cache
-      - name: Checkout Target Branch
-        if: steps.cache-repo.outputs.cache-hit != 'true'
-        uses: actions/checkout@v3
+  #       # Checkout the branch if not restored via cache
+  #       - name: Checkout Target Branch
+  #         if: steps.cache-repo.outputs.cache-hit != 'true'
+  #         uses: actions/checkout@v3
 
-      # Log in to OpenShift.
-      # Note: The secrets needed to log in are NOT available if the PR comes from a FORK.
-      # PR's must originate from a branch off the original repo or else all openshift `oc` commands will fail.
-      - name: Log in to OpenShift
-        run: oc login --token=${{ secrets.TOOLS_SA_TOKEN }} --server=https://api.silver.devops.gov.bc.ca:6443
+  #       # Log in to OpenShift.
+  #       # Note: The secrets needed to log in are NOT available if the PR comes from a FORK.
+  #       # PR's must originate from a branch off the original repo or else all openshift `oc` commands will fail.
+  #       - name: Log in to OpenShift
+  #         run: oc login --token=${{ secrets.TOOLS_SA_TOKEN }} --server=https://api.silver.devops.gov.bc.ca:6443
 
-      # Install api pipeline node modules
-      # Note: This already caches node modules internally
-      - name: Install pipeline node modules
-        working-directory: api/.pipeline/
-        run: npm ci
+  #       # Install api pipeline node modules
+  #       # Note: This already caches node modules internally
+  #       - name: Install pipeline node modules
+  #         working-directory: api/.pipeline/
+  #         run: npm ci
 
-      # Deploy the queue image
-      - name: Deploy Queue Image
-        working-directory: "./api/.pipeline/"
-        run: |
-          DEBUG=* npm run queue:deploy -- --pr=$PR_NUMBER --env=dev
+  #       # Deploy the queue image
+  #       - name: Deploy Queue Image
+  #         working-directory: "./api/.pipeline/"
+  #         run: |
+  #           DEBUG=* npm run queue:deploy -- --pr=$PR_NUMBER --env=dev
 
   # Report the overall status of all jobs.
   # Why? Skipped jobs are not considered successes when specifying requird jobs in the GitHub PR settings. Rather than
