--- a/.github/workflows/cleanClosedPR.yml
+++ b/.github/workflows/cleanClosedPR.yml
@@ -73,13 +73,13 @@ jobs:
           DEBUG=* npm run clean -- --pr=$PR_NUMBER --env=build
           DEBUG=* npm run clean -- --pr=$PR_NUMBER --env=dev
 
-      # Clean the queue deployment artifacts
-      - name: Clean Queue Deployment
-        working-directory: "./api/.pipeline/"
-        run: |
-          npm ci
-          DEBUG=* npm run queue:clean -- --pr=$PR_NUMBER --env=build
-          DEBUG=* npm run queue:clean -- --pr=$PR_NUMBER --env=dev
+      #   # Clean the queue deployment artifacts
+      #   - name: Clean Queue Deployment
+      #     working-directory: "./api/.pipeline/"
+      #     run: |
+      #       npm ci
+      #       DEBUG=* npm run queue:clean -- --pr=$PR_NUMBER --env=build
+      #       DEBUG=* npm run queue:clean -- --pr=$PR_NUMBER --env=dev
 
       # Clean the reamaining build/deployment artifacts
       - name: Clean remaining Artifacts
