--- a/.github/workflows/deployStatic.yml
+++ b/.github/workflows/deployStatic.yml
@@ -285,55 +285,55 @@ jobs:
         run: |
           DEBUG=* npm run build -- --pr=$PR_NUMBER --branch=$BRANCH --type=static
 
-  # Build the Queue image
-  buildQueue:
-    name: Build Queue Image
-    runs-on: ubuntu-latest
-    timeout-minutes: 20
-    if: ${{ github.event.pull_request.merged == true }}
-    env:
-      PR_NUMBER: ${{ github.event.number }}
-      BRANCH: ${{ github.base_ref }}
-    needs:
-      - checkoutRepo
-    steps:
-      # Install Node - for `node` and `npm` commands
-      - name: Setup Node.js
-        uses: actions/setup-node@v3
-        with:
-          node-version: 14
+  #   # Build the Queue image
+  #   buildQueue:
+  #     name: Build Queue Image
+  #     runs-on: ubuntu-latest
+  #     timeout-minutes: 20
+  #     if: ${{ github.event.pull_request.merged == true }}
+  #     env:
+  #       PR_NUMBER: ${{ github.event.number }}
+  #       BRANCH: ${{ github.base_ref }}
+  #     needs:
+  #       - checkoutRepo
+  #     steps:
+  #       # Install Node - for `node` and `npm` commands
+  #       - name: Setup Node.js
+  #         uses: actions/setup-node@v3
+  #         with:
+  #           node-version: 14
 
-      # Load repo from cache
-      - name: Cache repo
-        uses: actions/cache@v3
-        id: cache-repo
-        env:
-          cache-name: cache-repo
-        with:
-          path: ${{ github.workspace }}/*
-          key: ${{ runner.os }}-build-${{ env.cache-name }}-${{ github.sha }}
+  #       # Load repo from cache
+  #       - name: Cache repo
+  #         uses: actions/cache@v3
+  #         id: cache-repo
+  #         env:
+  #           cache-name: cache-repo
+  #         with:
+  #           path: ${{ github.workspace }}/*
+  #           key: ${{ runner.os }}-build-${{ env.cache-name }}-${{ github.sha }}
 
-      # Checkout the branch if not restored via cache
-      - name: Checkout Target Branch
-        if: steps.cache-repo.outputs.cache-hit != 'true'
-        uses: actions/checkout@v3
+  #       # Checkout the branch if not restored via cache
+  #       - name: Checkout Target Branch
+  #         if: steps.cache-repo.outputs.cache-hit != 'true'
+  #         uses: actions/checkout@v3
 
-      # Log in to OpenShift.
-      # Note: The secrets needed to log in are NOT available if the PR comes from a FORK.
-      # PR's must originate from a branch off the original repo or else all openshift `oc` commands will fail.
-      - name: Log in to OpenShift
-        run: oc login --token=${{ secrets.TOOLS_SA_TOKEN }} --server=https://api.silver.devops.gov.bc.ca:6443
+  #       # Log in to OpenShift.
+  #       # Note: The secrets needed to log in are NOT available if the PR comes from a FORK.
+  #       # PR's must originate from a branch off the original repo or else all openshift `oc` commands will fail.
+  #       - name: Log in to OpenShift
+  #         run: oc login --token=${{ secrets.TOOLS_SA_TOKEN }} --server=https://api.silver.devops.gov.bc.ca:6443
 
-      # Install api pipeline node modules
-      - name: Install api pipeline node modules
-        working-directory: "api/.pipeline/"
-        run: npm ci
+  #       # Install api pipeline node modules
+  #       - name: Install api pipeline node modules
+  #         working-directory: "api/.pipeline/"
+  #         run: npm ci
 
-      # Build the queue image
-      - name: Build Queue Image
-        working-directory: "./api/.pipeline/"
-        run: |
-          DEBUG=* npm run queue:build -- --pr=$PR_NUMBER --branch=$BRANCH --type=static
+  #       # Build the queue image
+  #       - name: Build Queue Image
+  #         working-directory: "./api/.pipeline/"
+  #         run: |
+  #           DEBUG=* npm run queue:build -- --pr=$PR_NUMBER --branch=$BRANCH --type=static
 
   # Deploy APP image
   deployAPP:
@@ -541,58 +541,58 @@ jobs:
         run: |
           DEBUG=* npm run deploy -- --pr=$PR_NUMBER --env=$BRANCH --branch=$BRANCH --type=static
 
-  # Deploy Queue image
-  deployQueue:
-    name: Deploy Queue Image
-    runs-on: ubuntu-latest
-    timeout-minutes: 20
-    if: ${{ github.event.pull_request.merged == true }}
-    env:
-      PR_NUMBER: ${{ github.event.number }}
-      BRANCH: ${{ github.base_ref }}
-    needs:
-      - scaleDownPods
-      - buildQueue
-      - deployDatabase
-    steps:
-      # Install Node - for `node` and `npm` commands
-      - name: Setup Node.js
-        uses: actions/setup-node@v3
-        with:
-          node-version: 14
+  #   # Deploy Queue image
+  #   deployQueue:
+  #     name: Deploy Queue Image
+  #     runs-on: ubuntu-latest
+  #     timeout-minutes: 20
+  #     if: ${{ github.event.pull_request.merged == true }}
+  #     env:
+  #       PR_NUMBER: ${{ github.event.number }}
+  #       BRANCH: ${{ github.base_ref }}
+  #     needs:
+  #       - scaleDownPods
+  #       - buildQueue
+  #       - deployDatabase
+  #     steps:
+  #       # Install Node - for `node` and `npm` commands
+  #       - name: Setup Node.js
+  #         uses: actions/setup-node@v3
+  #         with:
+  #           node-version: 14
 
-      # Load repo from cache
-      - name: Cache repo
-        uses: actions/cache@v3
-        id: cache-repo
-        env:
-          cache-name: cache-repo
-        with:
-          path: ${{ github.workspace }}/*
-          key: ${{ runner.os }}-build-${{ env.cache-name }}-${{ github.sha }}
+  #       # Load repo from cache
+  #       - name: Cache repo
+  #         uses: actions/cache@v3
+  #         id: cache-repo
+  #         env:
+  #           cache-name: cache-repo
+  #         with:
+  #           path: ${{ github.workspace }}/*
+  #           key: ${{ runner.os }}-build-${{ env.cache-name }}-${{ github.sha }}
 
-      # Checkout the branch if not restored via cache
-      - name: Checkout Target Branch
-        if: steps.cache-repo.outputs.cache-hit != 'true'
-        uses: actions/checkout@v3
+  #       # Checkout the branch if not restored via cache
+  #       - name: Checkout Target Branch
+  #         if: steps.cache-repo.outputs.cache-hit != 'true'
+  #         uses: actions/checkout@v3
 
-      # Log in to OpenShift.
-      # Note: The secrets needed to log in are NOT available if the PR comes from a FORK.
-      # PR's must originate from a branch off the original repo or else all openshift `oc` commands will fail.
-      - name: Log in to OpenShift
-        run: oc login --token=${{ secrets.TOOLS_SA_TOKEN }} --server=https://api.silver.devops.gov.bc.ca:6443
+  #       # Log in to OpenShift.
+  #       # Note: The secrets needed to log in are NOT available if the PR comes from a FORK.
+  #       # PR's must originate from a branch off the original repo or else all openshift `oc` commands will fail.
+  #       - name: Log in to OpenShift
+  #         run: oc login --token=${{ secrets.TOOLS_SA_TOKEN }} --server=https://api.silver.devops.gov.bc.ca:6443
 
-      # Install api pipeline node modules
-      - name: Install api pipeline node modules
-        working-directory: "api/.pipeline/"
-        run: npm ci
+  #       # Install api pipeline node modules
+  #       - name: Install api pipeline node modules
+  #         working-directory: "api/.pipeline/"
+  #         run: npm ci
 
-      # Deploy the queue image
-      - name: Deploy Queue Image
-        working-directory: "./api/.pipeline/"
-        run: |
-          npm ci
-          DEBUG=* npm run queue:deploy -- --pr=$PR_NUMBER --env=$BRANCH --branch=$BRANCH --type=static
+  #       # Deploy the queue image
+  #       - name: Deploy Queue Image
+  #         working-directory: "./api/.pipeline/"
+  #         run: |
+  #           npm ci
+  #           DEBUG=* npm run queue:deploy -- --pr=$PR_NUMBER --env=$BRANCH --branch=$BRANCH --type=static
 
   # Clean build/deployment artifacts
   clean:
@@ -660,13 +660,13 @@ jobs:
           DEBUG=* npm run clean -- --pr=$PR_NUMBER --env=build
           DEBUG=* npm run clean -- --pr=$PR_NUMBER --env=dev
 
-      # Clean the queue deployment artifacts
-      - name: Clean Queue Deployment
-        working-directory: "./api/.pipeline/"
-        run: |
-          npm ci
-          DEBUG=* npm run queue:clean -- --pr=$PR_NUMBER --env=build
-          DEBUG=* npm run queue:clean -- --pr=$PR_NUMBER --env=dev
+      #   # Clean the queue deployment artifacts
+      #   - name: Clean Queue Deployment
+      #     working-directory: "./api/.pipeline/"
+      #     run: |
+      #       npm ci
+      #       DEBUG=* npm run queue:clean -- --pr=$PR_NUMBER --env=build
+      #       DEBUG=* npm run queue:clean -- --pr=$PR_NUMBER --env=dev
 
       # Clean the reamaining build/deployment artifacts
       - name: Clean remaining Artifacts
